--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/Index.cshtml
@@ -13,7 +13,7 @@
 
 <html>
 <head>
-    <script src="~/Resources/js/lib/jquery-1.9.1.js"></script>
+    @*<script src="~/Resources/js/lib/jquery-1.9.1.js"></script>*@
     <script src="~/assets/plugins/bootstrap-notify/bootstrap-notify.js"></script>
     <script src="~/assets/js/pages/ui/notifications.js"></script>
     <script type="text/javascript">
