--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/InventarioXConcepto.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/InventarioXConcepto.cshtml
@@ -34,11 +34,11 @@
                 <div class="block-header">
                     <div class="row clearfix">
                         <div class="col-lg-12 col-md-12 col-sm-12">
-                            <h2>Cubo de informacion</h2>
+                            <h2>Cubo de información</h2>
                             <ul class="breadcrumb padding-0">
                                 <li class="breadcrumb-item"><a href="index.html"><i class="zmdi zmdi-home"></i></a></li>
                                 <li class="breadcrumb-item">Reportes</li>
-                                <li class="breadcrumb-item">Rendimiento Vehicular</li>
+                                <li class="breadcrumb-item">Inventario concepto</li>
                             </ul>
                         </div>
                     </div>
