--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/RolMovilVenta.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/RolMovilVenta.cshtml
@@ -14,6 +14,8 @@
 @Html.HiddenFor(m => m.AlmacenActualizaExistencias)
 @Html.HiddenFor(m => m.AlmacenVerExistencias)
 @Html.HiddenFor(m => m.AlmacenVerMovimientos)
+@Html.HiddenFor(m => m.AlmacenRegistrarAlmacen)
+@Html.HiddenFor(m => m.AlmacenVerProductos)
 @Html.HiddenFor(m => m.RequisicionVerRequisiciones)
 @Html.HiddenFor(m => m.RequisicionGenerarNueva)
 @Html.HiddenFor(m => m.RequisicionRevisarExistencia)
@@ -93,6 +95,20 @@
 @Html.HiddenFor(m => m.PedidoGenerarPedido)
 @Html.HiddenFor(m => m.PedidoModificarPedido)
 @Html.HiddenFor(m => m.PedidoEliminarPedido)
+@Html.HiddenFor(m => m.ConsultarRemanenteGeneral)
+@Html.HiddenFor(m => m.ETRegistrarParqueVehicular)
+@Html.HiddenFor(m => m.ETConsultarParqueVehicular)
+@Html.HiddenFor(m => m.ETAsignarVehiculo)
+@Html.HiddenFor(m => m.ETConsultarAsignarVehiculo)
+@Html.HiddenFor(m => m.ETBorrarAsignacionVehicular)
+@Html.HiddenFor(m => m.ETRegistrarMantenimiento)
+@Html.HiddenFor(m => m.ETBorrarMantenimiento)
+@Html.HiddenFor(m => m.ETRegistrarRecargaCombustible)
+@Html.HiddenFor(m => m.ETBorrarRecargaCombustible)
+@Html.HiddenFor(m => m.CobranzaConsultarFactura)
+@Html.HiddenFor(m => m.CobranzaFacturar)
+@Html.HiddenFor(m => m.FacturasVerFacturas)
+@Html.HiddenFor(m => m.FacturasFacturar)
 <tr>
     <td>@Model.NombreRol </td>
     <td>@Html.CheckBoxFor(m => m.AppDisposicionEfectivo)</td>
